--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/preset-env": "^7.22.5",
     "@babel/preset-typescript": "^7.22.5",
+    "@types/jquery": "^3.5.16",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "babel-loader": "^9.1.2",
     "copy-webpack-plugin": "^11.0.0",
@@ -36,6 +37,7 @@
     "eslint-plugin-promise": "^6.1.1",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.3",
+    "jquery": "^3.7.0",
     "mini-css-extract-plugin": "^2.7.6",
     "postcss": "^8.4.24",
     "postcss-loader": "^7.3.3",
