--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack serve --open",
+    "test": "set TS_NODE_COMPILER_OPTIONS={\"module\": \"commonjs\" } & mocha -r ts-node/register -r tsconfig-paths/register ./src/test/**/*.spec.ts",
     "dev": "cross-env NODE_ENV=development webpack ",
     "build": "cross-env NODE_ENV=production webpack ",
     "predeploy": "npm run build",
@@ -21,9 +22,12 @@
     "@babel/plugin-transform-typescript": "^7.22.5",
     "@babel/preset-env": "^7.22.5",
     "@babel/preset-typescript": "^7.21.5",
+    "@types/chai": "^4.3.5",
     "@types/jquery": "^3.5.16",
+    "@types/mocha": "^10.0.1",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "babel-loader": "^9.1.2",
+    "chai": "^4.3.7",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "cross-env": "^7.0.3",
@@ -38,6 +42,7 @@
     "html-webpack-plugin": "^5.5.3",
     "jquery": "^3.7.0",
     "mini-css-extract-plugin": "^2.7.6",
+    "mocha": "^10.2.0",
     "postcss": "^8.4.24",
     "postcss-loader": "^7.3.3",
     "postcss-preset-env": "^8.5.0",
@@ -45,6 +50,8 @@
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
     "ts-loader": "^9.4.3",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.3",
     "webpack": "^5.87.0",
     "webpack-cli": "^5.1.4",
