--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@babel/preset-typescript": "^7.21.5",
     "@types/chai": "^4.3.5",
     "@types/jquery": "^3.5.16",
+    "@types/jsdom": "^21.1.1",
     "@types/mocha": "^10.0.1",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "babel-loader": "^9.1.2",
@@ -41,11 +42,14 @@
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.3",
     "jquery": "^3.7.0",
+    "jsdom": "^22.1.0",
     "mini-css-extract-plugin": "^2.7.6",
     "mocha": "^10.2.0",
+    "playwright": "^1.36.2",
     "postcss": "^8.4.24",
     "postcss-loader": "^7.3.3",
     "postcss-preset-env": "^8.5.0",
+    "puppeteer": "^20.9.0",
     "sass": "^1.63.4",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
