--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/chai": "^4.3.5",
     "@types/jquery": "^3.5.16",
     "@types/jsdom": "^21.1.1",
+    "@types/lodash": "^4.14.198",
     "@types/mocha": "^10.0.1",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "babel-loader": "^9.1.2",
@@ -65,5 +66,8 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
