--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/jsdom": "^21.1.1",
     "@types/lodash": "^4.14.198",
     "@types/mocha": "^10.0.1",
+    "@types/sinon": "^10.0.20",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "babel-loader": "^9.1.2",
     "chai": "^4.3.7",
@@ -53,6 +54,7 @@
     "puppeteer": "^20.9.0",
     "sass": "^1.63.4",
     "sass-loader": "^13.3.2",
+    "sinon": "^17.0.1",
     "style-loader": "^3.3.3",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
